--- a/calc.html
+++ b/calc.html
@@ -11,15 +11,15 @@ function add(a, b){
     console.log("Result = " + (a + b)); 
 }
 
-function subtract(a, b){
+function sub(a, b){
     console.log("Result = " + (a - b)); 
 }
 
-function multiply(a, b){
+function mul(a, b){
     console.log("Result = " + (a * b)); 
 }
 
-function divide(a, b){
+function div(a, b){
     console.log("Result = " + (a / b)); 
 }
 
